<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/intro_logo_height"
        android:layout_marginTop="@dimen/intro_logo_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/description_image"/>

    <TextView
        android:id="@+id/textView_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_intro"
        android:fontFamily="@font/nanumsquare_r"
        android:textSize="@dimen/intro_text_size"
        android:textColor="@color/colorGray"
        android:layout_marginTop="@dimen/intro_text_marginTop"
        app:layout_constraintEnd_toEndOf="@+id/imageView_logo"
        app:layout_constraintStart_toStartOf="@+id/imageView_logo"
        app:layout_constraintTop_toBottomOf="@+id/imageView_logo" />

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name"
        android:fontFamily="@font/nanumsquare_eb"
        android:textSize="@dimen/intro_logotext_size"
        android:textColor="@color/colorRed"
        android:layout_marginTop="@dimen/intro_logotext_marginTop"
        app:layout_constraintEnd_toEndOf="@+id/imageView_logo"
        app:layout_constraintStart_toStartOf="@+id/imageView_logo"
        app:layout_constraintTop_toBottomOf="@+id/textView_intro" />

    <EditText
        android:id="@+id/editText_identification"
        android:layout_width="@dimen/intro_button_edittext_width"
        android:layout_height="@dimen/intro_edittext_identification_height"
        android:ems="10"
        android:inputType="textMultiLine|textNoSuggestions"
        android:hint="Name"
        android:background="@drawable/edittext_shape"
        android:layout_marginTop="@dimen/intro_edittext_marginTop"
        app:layout_constraintEnd_toEndOf="@+id/imageView_logo"
        app:layout_constraintStart_toStartOf="@+id/imageView_logo"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="@dimen/intro_button_edittext_width"
        android:layout_height="@dimen/intro_button_edittext_password_height"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/edittext_shape"
        android:layout_marginTop="@dimen/intro_marginTop"
        app:layout_constraintStart_toStartOf="@+id/editText_identification"
        app:layout_constraintTop_toBottomOf="@+id/editText_identification" />

    <Button
        android:id="@+id/button_signin"
        android:layout_width="@dimen/intro_button_edittext_width"
        android:layout_height="@dimen/intro_button_edittext_password_height"
        android:text="@string/login_signin"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_shape"
        android:stateListAnimator="@null"
        android:layout_marginTop="@dimen/intro_marginTop"
        app:layout_constraintEnd_toEndOf="@+id/editText_password"
        app:layout_constraintStart_toStartOf="@+id/editText_password"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <TextView
        android:id="@+id/textView_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_search"
        android:textSize="@dimen/intro_text_size"
        android:textColor="@color/colorGray"
        android:layout_marginTop="@dimen/intro_searchtext_marginTop"
        app:layout_constraintEnd_toEndOf="@+id/imageView_logo"
        app:layout_constraintStart_toStartOf="@+id/imageView_logo"
        app:layout_constraintTop_toBottomOf="@+id/button_signin" />

    <TextView
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:textStyle="bold"
        android:textSize="@dimen/intro_signuptext_size"
        android:textColor="@color/colorBlack"
        android:layout_marginTop="@dimen/intro_signuptext_marginTop"
        app:layout_constraintEnd_toEndOf="@+id/imageView_logo"
        app:layout_constraintStart_toStartOf="@+id/imageView_logo"
        app:layout_constraintTop_toBottomOf="@+id/textView_search" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_facebook"
        android:textStyle="bold"
        android:textSize="@dimen/intro_signuptext_size"
        android:textColor="@color/colorBlue"
        android:drawableStart="@drawable/image"
        android:drawablePadding="@dimen/intro_facebooklogo_padding"
        android:layout_marginBottom="@dimen/intro_marginBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>